# TypeScriptLua

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  babyloncli.ts  binarywriter.ts  build-lua-moongl.cmd  build-lua-opengl-debug.cmd  build-lua-opengl.cmd  build-lua.cmd  build.cmd  contexts.ts  emitter.ts  helpers.ts  main.ts  opcodes.ts  package.json  prepublish_npm.cmd  resolvers.ts  test.js  test.ts  test0.ts  test2.ts  thirdparty_download.cmd  tsconfig.json  tsconfig.test.json  tsconfig1.json  tslint.json  types.ts  typescriptlua.code-workspace
experiments/: experiments.code-workspace
experiments/ArrayBufferAdapter/: CMakeLists.txt  array_buffer.c  build.cmd
experiments/BABYLON/: .gitignore  babyloncli.lua.map  babyloncli.ts  buiild_bs.bat  build_bs.bat  canvas.d.ts  canvas.ts  canvas2d.ts  clean_bs.bat  copy_bs.bat  copy_js.bat  declarations.d.ts  document.ts  image.d.ts  image.ts  out  package.json  simple_test.ts  simple_test2.ts  test.html  test2.html  test3.html  testapp.ts  testapp2.ts  testapp3.ts  testapp4.ts  testapp5.ts  testapp6.ts  testloadmesh.ts  tsconfig.json  window.d.ts  window.ts
experiments/FreeImageAdapter/: CMakeLists.txt  build.cmd  freeimageadapter.c
experiments/FreeImageAdapter/Tests/: init.lua
experiments/Pcre2Adapter/: CMakeLists.txt  build.cmd  pcre2adapter.c
experiments/Pcre2Adapter/Tests/: groups.lua  init.lua
experiments/WebGLAdapter/: CMakeLists.txt  build.cmd  gl.c  glut.c
experiments/WebGLAdapter/Tests/: init.lua
experiments/jslib/: Array.ts  ArrayBuffer.ts  Common.ts  Console.ts  Date.ts  Error.ts  Float32Array.ts  Float64Array.ts  JSON.ts  Map.ts  Math.ts  Number.ts  Object.ts  RegExp.ts  RegeExp.ts  String.ts  TypedArrayBase.ts  Uint16Array.ts  Uint32Array.ts  Uint64Array.ts  Uint8Array.ts  Undefined.ts  XMLHttpRequest.ts  tsconfig.json
jslib/: Float32Array.ts  Object.ts  TypedArrayBase.ts  tsconfig.json
lua/: CMakeLists.txt
spec/: basic.spec.ts  basic_types.spec.ts  break_continue.spec.ts  class.spec.ts  delete.spec.ts  discrepancies.spec.ts  exports.spec.ts  functions.spec.ts  instanceof.spec.ts  main.spec.ts  modules_and_namespaces.spec.ts  object.spec.ts  operators.spec.ts  regex.spec.ts  regexp.spec.ts  special_cases.spec.ts  statements.spec.ts  try_catch_finally.spec.ts  undefined.spec.ts  variable_declarations.spec.ts
src/: binarywriter.ts  compiler.ts  contexts.ts  emitter.ts  emitterlua.ts  helpers.ts  main.ts  opcodes.ts  package.json  preprocessor.ts  preprocessorlua.ts  resolvers.ts  test0.ts  tests.ts  textwriter.ts  typeInfo.ts
test/: .gitignore  copy_js.bat  out_canvas  test.lua.map  test.ts  test2.lua.map  test2.ts  tsconfig.json
vscode-lua-debug/: .gitignore  .travis.yml  .vscodeignore  CHANGELOG.md  appveyor.yml  package.json  readme.md
vscode-lua-debug/debugger/: _debugger.lua  debugger.lua
vscode-lua-debug/src/: debugAdapter.ts  extension.ts  luaDebug.ts  luaRuntime.ts  mockDebug.ts  mockRuntime.ts  tsconfig.json  tslint.json
vscode-lua-debug/src/tests/: adapter.test.ts
vscode-lua-debug/src/tests/data/: test.md  testLazyBreakpoint.md  testWithException.md
vscode-lua-debug/test/: _debugger.lua  file.lua  shell.ts
